--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "docker:db:down": "docker-compose -f src/main/docker/postgresql.yml down -v",
     "docker:db:up": "docker-compose -f src/main/docker/postgresql.yml up -d",
     "docker:others:await": "",
-    "docker:others:down": "",
+    "docker:others:down": "npm run docker:redis:down",
     "predocker:others:up": "",
-    "docker:others:up": "",
+    "docker:others:up": "npm run docker:redis:up",
+    "docker:redis:down": "docker-compose -f src/main/docker/redis.yml down -v",
+    "docker:redis:up": "docker-compose -f src/main/docker/redis.yml up -d",
     "java:docker": "./gradlew bootJar -Pprod jibDockerBuild",
     "java:docker:dev": "npm run java:docker -- -Pdev,webapp",
     "java:docker:prod": "npm run java:docker -- -Pprod",
