--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -5,7 +5,7 @@
     "baseName": "jhipsterSampleApplication",
     "blueprints": [],
     "buildTool": "gradle",
-    "cacheProvider": "no",
+    "cacheProvider": "redis",
     "clientFramework": "angularX",
     "clientPackageManager": "npm",
     "clientTheme": "none",
