--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -9,6 +9,10 @@ services:
       - MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED=true
       - SPRING_DATASOURCE_URL=jdbc:postgresql://jhipstersampleapplication-postgresql:5432/jhipsterSampleApplication
       - SPRING_LIQUIBASE_URL=jdbc:postgresql://jhipstersampleapplication-postgresql:5432/jhipsterSampleApplication
+      - JHIPSTER_CACHE_REDIS_SERVER=redis://jhipstersampleapplication-redis:6379
+      - JHIPSTER_CACHE_REDIS_CLUSTER=false
+      # - JHIPSTER_CACHE_REDIS_SERVER=redis://jhipstersampleapplication-redis:6379
+      # - JHIPSTER_CACHE_REDIS_CLUSTER=true
       - JHIPSTER_SLEEP=30 # gives time for other services to boot before the application
     # If you want to expose these ports outside your dev PC,
     # remove the "127.0.0.1:" prefix
@@ -26,3 +30,9 @@ services:
     # remove the "127.0.0.1:" prefix
     ports:
       - 127.0.0.1:5432:5432
+  jhipstersampleapplication-redis:
+    image: redis:6.2.6
+    # If you want to expose these ports outside your dev PC,
+    # remove the "127.0.0.1:" prefix
+    ports:
+      - 127.0.0.1:6379:6379
